# goals.zone

./: .gitignore  .travis.yml  Procfile  README.md  deploy_key.enc  manage.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: deploy.yml  django.yml  restart.yml
africa/: admin.py  apps.py  models.py  urls.py  views.py
africa/migrations/: 0001_initial.py  0002_africamatchesfilter.py  0003_remove_africamatchesfilter_exclude_teams_and_more.py  0004_remove_africamatchesfilter_exclude_categories_and_more.py
conf/: mysql.cnf
django_logtail/: admin.py  app_settings.py  models.py
goals_zone/: hosts.py  settings.py  tests.py  urls.py  wsgi.py
goals_zone/middleware/: timezone.py
goals_zone/test/: affiliateterms.json  matches.json  teamalias.json  teams.json
matches/: admin.py  apps.py  feeds.py  goals_populator.py  matches_populator.py  models.py  pagination.py  proxy_request.py  serializers.py  twitter.py  urls.py  utils.py  views.py
matches/migrations/: 0001_initial.py  0002_videogoal.py  0003_auto_20191025_0931.py  0004_auto_20191025_1120.py  0005_match_slug.py  0006_auto_20191108_1625.py  0007_auto_20191112_1422.py  0008_auto_20191112_1431.py  0009_auto_20191112_1431.py  0010_teamalias.py  0011_auto_20200128_1553.py  0012_team_logo_file.py  0013_auto_20200128_1725.py  0014_auto_20200129_1530.py  0015_affiliateterm_is_prefix.py  0016_videogoalmirror.py  0017_auto_20200207_1915.py  0018_auto_20200213_1219.py  0019_team_name_code.py  0020_match_tweet_sent.py  0021_auto_20200301_2142.py  0022_discordwebhookurl.py  0023_discordwebhookurl_message.py  0024_auto_20200303_1227.py  0025_delete_webhookurl.py  0026_auto_20200304_1152.py  0027_auto_20200304_1223.py  0028_auto_20200304_1233.py  0029_auto_20200304_1236.py  0030_auto_20200304_1238.py  0031_auto_20200304_1718.py  0032_auto_20200306_1359.py  0033_auto_20200308_1729.py  0034_auto_20200309_1511.py  0035_team_slug.py  0036_auto_20200807_1457.py  0037_auto_20200811_1435.py  0038_auto_20200811_1437.py  0039_auto_20200909_0918.py  0040_team_updated_at.py  (+25 more)
monitoring/: admin.py  apps.py  models.py
monitoring/migrations/: 0001_initial.py  0002_remove_matchnotfound_url.py  0003_monitoringaccount.py  0004_auto_20200308_1945.py  0005_auto_20210410_1529.py  0006_delete_matchnotfound.py  0007_performancemonitorevent.py  0008_alter_performancemonitorevent_options_and_more.py  0009_monitoringaccount_goals_heartbeat_url_and_more.py  0010_delete_performancemonitorevent.py  0011_monitoringaccount_goals_reddit_heartbeat_url.py  0012_monitoringaccount_telegram_alert_bot_key.py  0013_monitoringaccount_proxy_heartbeat.py
msg_events/: admin.py  apps.py  models.py
msg_events/migrations/: 0001_initial.py  0002_tweet.py  0003_auto_20200304_1248.py  0004_auto_20200304_1526.py  0005_auto_20200304_1528.py  0006_auto_20200304_1530.py  0007_auto_20200304_1718.py  0008_auto_20200304_1720.py  0009_auto_20200304_1745.py  0010_auto_20200306_1507.py  0011_auto_20200308_1729.py  0012_auto_20200924_1021.py  0013_auto_20210410_1529.py  0014_custommessage.py  0015_alter_custommessage_result.py  0016_alter_custommessage_id.py  0017_alter_custommessage_id.py  0018_alter_custommessage_result.py  0019_auto_20211105_1226.py  0020_auto_20211108_0933.py  0021_alter_custommessage_webhooks_and_more.py  0022_alter_tweet_event_type_alter_webhook_event_type.py  0023_alter_tweet_event_type_alter_webhook_event_type.py  0024_custommessage_tweets.py  0025_alter_custommessage_tweets.py  0026_alter_custommessage_result.py  0027_alter_webhook_destination.py  0028_tweet_source_webhook_source.py
ner/: admin.py  apps.py  models.py  utils.py
ner/goals_zone_model/: config.cfg  meta.json
ner/migrations/: 0001_initial.py  0002_auto_20210308_1635.py  0003_alter_nerlog_id.py
static/css/: bootstrap-datetimepicker.min.css  bootstrap.min.css  custom.css  custom.min.css  select2.min.css
static/goals_zone/: browserconfig.xml  site.webmanifest
static/html/: footer_ad.html  footer_ad_adsterra.html  footer_ad_kryptoads.html  side_ad.html  side_ad_adsterra.html  side_ad_kryptoads.html
static/videogoals/: site.webmanifest
templates/: base.html
templates/snippets/: adsense.html  analytics.html  css.html  date_nav.html  favicon.html  footer.html  js.html  modal.html  nav.html  page_nav.html
videogoals/: settings.py  tests.py  urls.py  wsgi.py
videogoals/middleware/: timezone.py
videogoals/test/: matches.json  teams.json  (+1 more)
(+31 files in other folders)
