[tool.poetry]
name = "goals-zone"
version = "0.1.0"
description = "gz.meneses.pt"
authors = ["meneses-pt <andre@meneses.pt>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-webhook = "^1.2.1"
Django = "^4.1.2"
django4_background_tasks = "^1.2.7"
django_admin_rangefilter = "^0.8.8"
django_hosts = "^5.1"
djangorestframework = "^3.14.0"
fake_headers = "^1.0.2"
geoip2 = "^4.7.0"
lxml = "^4.9.3"
Markdown = "^3.4.1"
proxy_list = "^0.3.8"
psycopg = "^3.1.9"
pytz = "^2023.3"
requests = "^2.31.0"
slack_webhook = "^1.0.7"
spacy = "3.6.0"
tweepy = "^4.14"
Pillow = "^9.2.0"
psycopg2-binary = "^2.9.3"
gunicorn = {extras = ["gevent"], version = "^21.2.0"}
Brotli = "^1.0.9"
free-proxy = "^1.1"
black = "^23.7.0"
isort = "^5.12.0"
flakeheaven = "^3.0.0"
flake8-black = "^0.3.6"
flake8-comprehensions = "^3.14.0"
flake8-isort = "^6.0.0"
flake8-mutable = "^1.2.0"
django-cors-headers = "^4.2"
pymemcache = "^4.0.0"
retry = "^0.9.2"
cloudscraper = "^1.2.71"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flakeheaven]
# optionally inherit from remote config (or local if you want)
base = "https://raw.githubusercontent.com/flakeheaven/flakeheaven/main/pyproject.toml"
max_line_length = 100
# make output nice
format = "colored"
# show line of source code in output
show_source = true
extended_default_ignore = []  # https://github.com/flakehell/flakehell/issues/10
exclude = ["README.md", ".venv", ".git", "helm", "terraform", "build"]

[tool.flakeheaven.plugins]
flake8-black = ["+*"]
flake8-comprehensions = ["+*", "-C408"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-quotes = ["-*"]
flake8-commas = ["-*"]
flake8-builtins = ["-*"]
mccabe = ["+*"]
pycodestyle = [
    "+*",
    "-W503", # black compat: line break before binary operator
    "-E203"  # black compat: whitespace before ':'
]
pyflakes = ["+*"]
pylint = ["+*"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
line_length = 100
multi_line_output = 3  # Matches black formatting
use_parentheses = true
include_trailing_comma = true
force_grid_wrap = 0
ensure_newline_before_comments = true
